RESOLVED FIXED183709
Ensure Document::responseReceived and clearResource are called on the main thread
https://bugs.webkit.org/show_bug.cgi?id=183709
Summary Ensure Document::responseReceived and clearResource are called on the main th...
youenn fablet
Reported 2018-03-16 15:01:02 PDT
Ensure Document::responseReceived and clearResource are called on the main thread This might help debugging rdar://problem/36256931
Attachments
Patch (1.70 KB, patch)
2018-03-16 15:02 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2018-03-16 15:02:12 PDT
WebKit Commit Bot
Comment 2 2018-03-16 17:39:50 PDT
Comment on attachment 335974 [details] Patch Clearing flags on attachment: 335974 Committed r229690: <https://trac.webkit.org/changeset/229690>
WebKit Commit Bot
Comment 3 2018-03-16 17:39:51 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2018-03-16 17:41:24 PDT
Alexey Proskuryakov
Comment 5 2018-03-19 09:32:17 PDT
Comment on attachment 335974 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=335974&action=review > Source/WebCore/loader/DocumentLoader.cpp:704 > + ASSERT(isMainThread()); I don't think that this qualifies as "ensure". "Try to find cases when not", maybe.
Chris Dumez
Comment 6 2018-03-19 09:34:12 PDT
(In reply to Alexey Proskuryakov from comment #5) > Comment on attachment 335974 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=335974&action=review > > > Source/WebCore/loader/DocumentLoader.cpp:704 > > + ASSERT(isMainThread()); > > I don't think that this qualifies as "ensure". "Try to find cases when not", > maybe. ... or are we ensuring by crashing otherwise?
Alexey Proskuryakov
Comment 7 2018-03-19 12:48:05 PDT
That's only in debug mode.
Note You need to log in before you can comment on or make changes to this bug.