Ensure Document::responseReceived and clearResource are called on the main thread https://bugs.webkit.org/show_bug.cgi?id=183709

Reviewed by Chris Dumez.

No change of behavior.

* loader/DocumentLoader.cpp:
(WebCore::DocumentLoader::responseReceived):
(WebCore::DocumentLoader::clearMainResource):


Canonical link: https://commits.webkit.org/199357@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229690 268f45cc-cd09-0410-ab3c-d52691b4dbfc